--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:diagnostics": "vitest run src/test/diagnostics.ts",
-    "test:all": "npm run test:run && npm run test:e2e"
+    "test:all": "npm run test:run && npm run test:e2e",
+    "test:generate-pdf": "node scripts/generateTestPdf.js",
+    "test:convert": "node scripts/testConversion.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
