--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:diagnostics": "vitest run src/test/diagnostics.ts",
     "test:all": "npm run test:run && npm run test:e2e",
     "test:generate-pdf": "node scripts/generateTestPdf.js",
-    "test:convert": "node scripts/testConversion.js"
+    "test:convert": "node scripts/testConversion.js",
+    "test:pdf-to-docx": "node scripts/testPdfToDocx.js"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
