fix(frontend): CTAs, converters, build & SEO optimizations
- Remove duplicate CTAs from homepage hero section
- Move PopularToolsGrid below hero without title/subtitle
- Improve error handling in pdfstationClient (network errors, CORS)
- Add code-splitting to reduce bundle size (vendor, router, ui chunks)
- Optimize SEO with Open Graph and Twitter Card metadata
- Update build script to use tsc --noEmit for better type checking
- Organize package.json scripts (build, test, lint)
- All chunks now under 500KB with proper code-splitting

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "dev:api": "node --watch server.js",
     "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\"",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsc --project tsconfig.json --noEmit && vite build",
+    "build:ci": "vite build --mode production",
     "preview": "vite preview",
     "start": "node server.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:unit": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
@@ -22,7 +23,9 @@
     "test:all": "npm run test:run && npm run test:e2e",
     "test:generate-pdf": "node scripts/generateTestPdf.js",
     "test:convert": "node scripts/testConversion.js",
-    "test:pdf-to-docx": "node scripts/testPdfToDocx.js"
+    "test:pdf-to-docx": "node scripts/testPdfToDocx.js",
+    "lint": "eslint src --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,md}\""
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
