--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^5.1.0",
     "form-data": "^4.0.5",
     "lucide-react": "^0.294.0",
+    "mixpanel-browser": "^2.72.0",
     "multer": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
